# ben-salehi-52be-instagram-auto

./: .env.example  .gitignore  .plan  Cargo.toml  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: auth.rs  compositor.rs  config.rs  credentials.rs  error.rs  generation.rs  instagram.rs  lib.rs  main.rs  pipeline_worker.rs  publish_worker.rs  queue.rs  review.rs  routes.rs  schedule.rs  settings.rs  stock.rs  storage.rs
backend/src/db/: mod.rs  models.rs  repository.rs
backend/tests/: e2e_pipeline.rs
frontend/: eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/app/: AppLayout.tsx
frontend/src/auth/: AuthGate.tsx  AuthProvider.tsx  api.ts  context.ts  useAuth.ts
frontend/src/instagram/: api.ts
frontend/src/pages/: ConnectionsPage.tsx  LoginPage.tsx  OverviewPage.tsx  QueuePage.tsx  SettingsPage.tsx
frontend/src/queue/: api.ts
frontend/src/review/: api.ts
frontend/src/settings/: api.ts
migrations/: 20260720223000_create_core_models.sql  20260720224000_create_users.sql  20260720225000_create_content_settings.sql  20260720230000_create_instagram_oauth_states.sql  20260720230500_add_review_mode_to_content_settings.sql  20260720235500_add_publish_retry_state.sql
